alignment fixed

--- a/css/about_section.css
+++ b/css/about_section.css
@@ -101,7 +101,7 @@
 @media (max-width: 680px){
 
     .about-section{
-        margin: 15px 10px 10px 10px;
+        margin: 15px 5px 10px 5px;
         padding: 10px;
     }
 
