--- a/css/header.css
+++ b/css/header.css
@@ -122,7 +122,7 @@
 
     .hero-header-text{
         line-height: 40px;
-        margin: 3% 0% 2% 7%;
+        margin: 3% 0% 2% 6%;
         padding: 5% 0% 2% 5%;
 
     }
