--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,11 @@ html{
     font-family: 'Chivo', sans-serif;
 }
 
+p{
+    text-align: justify;
+    text-justify: inter-word;
+}
+
 .top-nav-bar{
     display: flex;
     justify-content: space-around;
@@ -117,4 +122,7 @@ img{
         padding: 2px 8px 2px 8px;
         font-size: 10px;
     }
+
+    .ghor{
+        margin: 25px 0px 5px 0px;
 }
